# amber-master

./: .env.example  .gitignore  README.md  analyze_matches.py  docker-compose.yml  google-apps-script.js  index.html  manage.sh  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
.github/workflows/: deploy.yml
backend/: Dockerfile  crud.py  database.py  init_db.sql  main.py  models.py  pyproject.toml  schemas.py  trueskill_logic.py
backend/scripts/: import_data.py  init_db.py  inspect_excel.py  reset_and_import.py
backend/sim/: README.md  advanced_sim.py
docs/: GAS_AUTH_SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
google-apps-script/: .claspignore  00_Config.gs  01_Helpers.gs  02_Api.gs  03_Players.gs  04_Matches.gs  05_CourtState.gs  06_Line.gs  CLASP.md  clasp.prod.json  clasp.test.json
public/: 404.html
scripts/: gas-clasp.mjs  test-llm-logic.ts
sim/: README.md  SimulationReporter.ts  SimulationRunner.ts  advancedSim.ts  comprehensiveSim.ts  ignoreFatigueTest.ts
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: BadmintonLoader.tsx  CourtCard.tsx  CustomDialog.tsx  ManagePlayers.tsx  MatchHistory.tsx  PlayerPill.tsx  PlayerProfile.tsx  RestStreakCornerBadge.tsx  SettingsModal.tsx  WinnerModal.tsx
src/constants/: avatar.ts
src/context/: AuthContext.tsx  DialogContext.tsx  ThemeContext.tsx
src/hooks/: useCourtSync.ts  useCourts.ts  useMatches.ts  usePlayerProfile.ts  usePlayers.ts
(+69 files in other folders)
